Fix overflowing images on events list

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -93,6 +93,10 @@
     padding: 15px;
     margin: 0 0 1.5em 0;
   }
+
+  img{
+    max-width: 100%;
+  }
 }
 
 .dependencies .card-header:after {
